--- a/cafe.html
+++ b/cafe.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-     
+     <header>
+
+     </header>
+     <nav>
+        <ul>
+        </ul>
+     </nav>
+     <header>
+
+     </header>
+     <main>
+
+     </main>
+     <footer>
+
+     </footer>
 </body>
 </html>
