comeco do comeco

--- a/cafe.html
+++ b/cafe.html
@@ -3,24 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/cafe.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
 <header>
-
+    <img src="" alt="" srcset="">
+   <nav>
+    <ul>
+        <li><a href="">home</a></li>
+        <li><a href="">contota</a></li>
+        <li><a href="">sobre nós</a></li>
+        <li><a href="">cadastro</a></li>
+    </ul>
+   </nav>
 </header>
 <header>
-
+   <h1></h1>
+   <img src="" alt="">
 </header>
-<nav>
-
-</nav>
 <main>
+<sction class="section__h2__a">
+    <h2><a href="">01</a></h2>
+    <img src="R.jpg" alt="">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, iusto!</p>
+    <h2><a href="">02</a></h2>
+    <img src="R.jpg" alt="">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, iusto!</p>
+    <h2><a href="">03</a></h2>
+    <img src="R.jpg" alt="">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, iusto!</p>
+    <h2><a href="">04</a></h2>
+    <img src="R.jpg" alt="">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, iusto!</p>
+</sction>
 
 </main>
 <footer>
-    
+    <nav>
+        <ul>
+            <li>Entra</li>
+            <li>Cadastrese</li>
+        </ul>
+    </nav>
+    <section>
+        <h3>contato</h3>
+    </section>
+    <section>
+        <h3>Rua</h3>
+    </section>
 </footer>
 </body>
 </html>
