--- a/cafe.html
+++ b/cafe.html
@@ -15,9 +15,9 @@
        <nav>
         <ul class="nav__">
             <li><a href="">home</a></li>
-            <li><a href="">contota</a></li>
+            <li><a href="">contato</a></li>
             <li><a href="">sobre nós</a></li>
-            <li><a href="">cadastro</a></li>
+            <li><a href="contato.html">cadastro</a></li>
         </ul>
        </nav>
    </div>
@@ -68,12 +68,6 @@
 
 </main>
 <footer>
-    <nav class="container-fluid">
-        <ul>
-            <li>Entra</li>
-            <li>Cadastrese</li>
-        </ul>
-    </nav>
     <section>
         <h3>contato</h3>
     </section>
