--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
     <title>Contato</title>
     <link rel="stylesheet" href="boot_trap/css/bootstrap.css">
     <link rel="stylesheet" href="css/cafe.css">
+    <link rel="stylesheet" href="css/contato.css">
 </head>
 <body>
     <header>
@@ -22,6 +23,22 @@
                </nav>
            </div>
     </header>
+    <main class="container">
+        <form class="caixa row g-3 row-cols-2">
+            <div class="col-auto gy-5 gx-5">
+              <label for="staticEmail2" class="visually-hidden cor_2">Email</label>
+              <input type="text" placeholder="E-mail" class="form-control-plaintext cor_" id="staticEmail2">
+            </div>
+            <div class="col-auto gy-5 gx-5">
+              <label for="inputPassword2" class="visually-hidden">Password</label>
+              <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+            </div>
+            <div class="col-auto  gy-5 gx-5">
+              <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
+            </div>
+          </form>
+          <img src="imagens/R.jpg" alt="">
+    </main>
     <script src="boot_trap/js/bootstrap.js"></script>
 </body>
 </html>
