--- a/cadastro.html
+++ b/cadastro.html
@@ -7,12 +7,12 @@
     <title>Contato</title>
     <link rel="stylesheet" href="boot_trap/css/bootstrap.css">
     <link rel="stylesheet" href="css/cafe.css">
-    <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/cadastro.css">
 </head>
 <body>
     <header>
         <div class="caixa_nav_ul">
-            <img id="cafe_" src="imagens/coffee-logo-logo-elements-logo-objects-3.png" alt="">
+            <img id="cafe_" src="images/coffee-logo-logo-elements-logo-objects-3.png" alt="">
                <nav>
                 <ul class="nav__">
                     <li><a href="cafe.html">home</a></li>
@@ -25,19 +25,21 @@
     </header>
     <main class="container">
         <form class="caixa row g-3 row-cols-2">
-            <div class="col-auto gy-5 gx-5">
+            <div class="col-auto gy-5">
               <label for="staticEmail2" class="visually-hidden cor_2">Email</label>
               <input type="text" placeholder="E-mail" class="form-control-plaintext cor_" id="staticEmail2">
             </div>
-            <div class="col-auto gy-5 gx-5">
+            <div class="col-auto gx-5">
               <label for="inputPassword2" class="visually-hidden">Password</label>
               <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
             </div>
-            <div class="col-auto  gy-5 gx-5">
+            <div class="col-auto">
               <button type="submit" class="btn btn-primary mb-3">Confirm identity</button>
             </div>
           </form>
-          <img src="imagens/R.jpg" alt="">
+          <div class="img_cadastro">
+            <img class="img__contato" src="images/5777810.png" alt="">
+          </div>
     </main>
     <script src="boot_trap/js/bootstrap.js"></script>
 </body>
