--- a/cafe.html
+++ b/cafe.html
@@ -11,13 +11,13 @@
 <body>
 <header>
    <div class="caixa_nav_ul">
-    <img id="cafe_" src="imagens/coffee-logo-logo-elements-logo-objects-3.png" alt="">
+    <img id="cafe_" src="images/coffee-logo-logo-elements-logo-objects-3.png" alt="">
        <nav>
         <ul class="nav__">
             <li><a href="">home</a></li>
             <li><a href="">contato</a></li>
             <li><a href="">sobre nós</a></li>
-            <li><a href="contato.html">cadastro</a></li>
+            <li><a href="cadastro.html">cadastro</a></li>
         </ul>
        </nav>
    </div>
@@ -28,13 +28,13 @@
        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img id="imagem" src="imagens/826182.jpg" class="d-block w-100" alt="...">
+            <img id="imagem" src="images/826182.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img id="imagem" src="imagens/qNKaOp.jpg" class="d-block w-100" alt="...">
+            <img id="imagem" src="images/qNKaOp.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img id="imagem" src="imagens/qNKaOp.jpg" class="d-block w-100" alt="...">
+            <img id="imagem" src="images/qNKaOp.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
          </div>
