--- a/cafe.html
+++ b/cafe.html
@@ -18,6 +18,7 @@
             <li><a href="">contato</a></li>
             <li><a href="">sobre nós</a></li>
             <li><a href="cadastro.html">cadastro</a></li>
+            <li><a href="Login.html">Login</a></li>
         </ul>
        </nav>
    </div>
