--- a/cafe.html
+++ b/cafe.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="images/bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="boot_trap/css/bootstrap.css">
    <link rel="stylesheet" href="css/cafe.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,40 +42,59 @@
          </div>
    </div>
 </header>
+<br>
 <main>
 <div class="container">
-    <sction class="row">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
-            <h2><a href="">01</a></h2>
-            <img src="R.jpg" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, iusto!</p>
+          <div  class="card altura">
+            <img src="images/mug-full-black-coffee-view-top-down-shallow-depth-field-desk-smooth-very-nice-colorful-image-97668840.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">cafe sem leite</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
         <div class="col">
-            <h2><a href="">02</a></h2>
-            <img src="R.jpg" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, iusto!</p>
+          <div class="card altura">
+            <img src="images/black-coffee-for-the-morning-good-day_33755-446.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">seu cafe com leite</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
         <div class="col">
-            <h2><a href="">03</a></h2>
-            <img src="R.jpg" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, iusto!</p>
+          <div class="card altura">
+            <img src="images/mug-full-black-coffee-view-top-down-shallow-depth-field-desk-smooth-very-nice-colorful-image-97668840.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">cafe puro</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
         </div>
         <div class="col">
-            <h2><a href="">04</a></h2>
-            <img src="R.jpg" alt="">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, iusto!</p>
+          <div class="card altura">
+            <img src="images/R (2).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">cafe ao puro forte</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
-    </sction>
+      </div>
 </div>
 
 </main>
+<br>
 <footer>
-    <section>
-        <h3>contato</h3>
-    </section>
-    <section>
-        <h3>Rua</h3>
-    </section>
+    <div class="container">
+      <section>
+          <h3><i class="bi bi-telephone"></i> contato</h3>
+         <br>
+          <h3><i class="bi  bi-star"></i> Rua</h3>
+      </section>
+    </div>
 </footer>
 <script src="boot_trap/js/bootstrap.js"></script>
 </body>
