--- a/cafe.html
+++ b/cafe.html
@@ -26,7 +26,7 @@
 </header>
 <header>
    <div class="caixa_slide">
-       <h1 class="h1-hearde">o melhor da cidader de <span class="span_colo">amontada</span> pode ler oferecer</h1>
+       <h1 class="h1-hearde">o melhor da cidader de <span class="span_colo">amontada</span> pode le oferecer</h1>
        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
