--- a/Login.html
+++ b/Login.html
@@ -25,7 +25,7 @@
             </nav>
         </div>
     </header>
-    <form class="row g-3">
+    <form class="row g-3" method="dialog">
         <div class="col-md-6">
           <label for="inputEmail4" class="form-label">Email</label>
           <input type="email" class="form-control" id="inputEmail4">
@@ -35,7 +35,7 @@
           <input type="password" class="form-control" id="inputPassword4">
         </div>
         <div class="col-12">
-          <button type="submit" class="btn btn-primary">Sign in</button>
+          <button type="submit" class="btn btn-primary" onclick="login();">Sign in</button>
         </div>
       </form>
       <script src="boot_trap/js/bootstrap.js"></script>
